--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             Szolgáltatások
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#Webfejlesztes">Webfejlesztés</a></li>
-            <li><a class="dropdown-item" href="#Brandepites">Brandépites</a></li>
-           <li><a class="dropdown-item" href="#Marketing">Online Marketing</a></li>
+            <li><a class="dropdown-item" href="webfejlesztes.html">Webfejlesztés</a></li>
+            <li><a class="dropdown-item" href="brandepites">Brandépites</a></li>
+           <li><a class="dropdown-item" href="marketing">Online Marketing</a></li>
           </ul>
         </li>
           <li class="nav-item"><a class="nav-link" href="#team">Csapat</a></li>
@@ -66,6 +66,7 @@
             <div class="card-body">
               <h5 class="card-title">Webfejlesztés</h5>
               <p class="card-text">Reszponzív, gyors és modern weboldalak tervezése és fejlesztése.</p>
+               <a href="webfejlesztes.html" class="btn btn-primary">Tovább</a>
             </div>
           </div>
         </div>
@@ -75,6 +76,7 @@
             <div class="card-body">
               <h5 class="card-title">Brandépítés</h5>
               <p class="card-text">Arculattervezés, logó készítés és vizuális kommunikáció.</p>
+               <a href="brandepites.html" class="btn btn-primary">Tovább</a>
             </div>
           </div>
         </div>
@@ -84,6 +86,7 @@
             <div class="card-body">
               <h5 class="card-title">Online marketing</h5>
               <p class="card-text">SEO, PPC, közösségi média kampányok és tartalomgyártás.</p>
+               <a href="marketing.html" class="btn btn-primary">Tovább</a>
             </div>
           </div>
         </div>
@@ -141,7 +144,7 @@
   </section>
 
 
-  <footer class="text-center bg-black text-white py-4">
+  <footer class="text-center bg-black py-4">
     <div class="container">
       <p class="mb-0">&copy; 2025 NovaCreative. Minden jog fenntartva.</p>
     </div>
