--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow ">
     <div class="container">
       <img src="képek/logo-transparent.png" alt="logo" style="width: 50px;" class="me-2">
@@ -26,7 +25,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="webfejlesztes.html">Webfejlesztés</a></li>
-            <li><a class="dropdown-item" href="brandepites">Brandépites</a></li>
+            <li><a class="dropdown-item" href="brandepites.html">Brandépítés</a></li>
            <li><a class="dropdown-item" href="marketing">Online Marketing</a></li>
           </ul>
         </li>
@@ -144,12 +143,40 @@
   </section>
 
 
-  <footer class="text-center bg-black py-4">
-    <div class="container">
+<footer class="text-light bg-dark mt-5 pt-4 pb-4">
+  <div class="container">
+    <div class="row text-center text-md-start">
+      <!-- Céginformáció -->
+      <div class="col-md-4 mb-4">
+        <img src="képek/logo-transparent.png" alt="Logo" class="mb-2 w-50">
+        <p>Kreatív digitális megoldások – webfejlesztés, arculattervezés, marketing egy helyen.</p>
+      </div>
+
+      <!-- Elérhetőségek -->
+      <div class="col-md-4 mb-4">
+        <h5>Elérhetőségek</h5>
+        <ul class="list-unstyled">
+          <li><i class="bi bi-telephone-fill"></i> +36 20 223 0669</li>
+          <li><i class="bi bi-envelope-fill"></i> info@novacreative.hu</li>
+          <li><i class="bi bi-geo-alt-fill"></i> 9155 Lébény Akácfa utca 65.</li>
+        </ul>
+      </div>
+
+      <!-- Közösségi média -->
+      <div class="col-md-4 mb-4">
+        <h5>Kövess minket</h5>
+        <a href="#" class="text-light me-2"><i class="bi bi-facebook"></i> Facebook</a><br>
+        <a href="#" class="text-light me-2"><i class="bi bi-instagram"></i> Instagram</a><br>
+      </div>
+    </div>
+
+    <hr class="border-light">
+
+    <div class="text-center">
       <p class="mb-0">&copy; 2025 NovaCreative. Minden jog fenntartva.</p>
     </div>
-  </footer>
-
+  </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
