--- a/webfejlesztes.html
+++ b/webfejlesztes.html
@@ -9,7 +9,6 @@
   
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow ">
     <div class="container">
       <img src="képek/logo-transparent.png" alt="logo" style="width: 50px;" class="me-2">
@@ -25,9 +24,9 @@
             Szolgáltatások
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#Webfejlesztes">Webfejlesztés</a></li>
-            <li><a class="dropdown-item" href="#Brandepites">Brandépites</a></li>
-           <li><a class="dropdown-item" href="#Marketing">Online Marketing</a></li>
+            <li><a class="dropdown-item" href="webfejlesztes.html">Webfejlesztés</a></li>
+            <li><a class="dropdown-item" href="brandepites.html">Brandépítés</a></li>
+           <li><a class="dropdown-item" href="Marketing">Online Marketing</a></li>
           </ul>
         </li>
           <li class="nav-item"><a class="nav-link" href="#team">Csapat</a></li>
@@ -44,68 +43,152 @@
       <p class="lead">Modern, reszponzív, gyors és felhasználóbarát weboldalak – a NovaCreative csapatától.</p>
     </div>
   </header>
-  <section class="container mt-5">
+
+ <section class="container mt-5">
+
+
+ <div class="row align-items-center mb-5">
+  <div class="col-12 mb-4 text-center">
+    <h2>Miért válaszd a NovaCreative webfejlesztési szolgáltatásait?</h2>
+    <p>A mai digitális világban az első benyomás döntő szerepet játszik vállalkozásod sikerében. Egy professzionális, gyorsan betöltődő és egyszerűen kezelhető weboldal alapja minden hatékony online jelenlétnek.</p>
+  </div>
+  <div class="col-md-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="" class="card-img-top rounded shadow-sm" alt="Reszponzív design">
+      <div class="card-body">
+        <h5 class="card-title">Reszponzív design</h5>
+        <p class="card-text">Teljes mértékben reszponzív és mobilbarát kialakítás minden eszközre.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="" class="card-img-top rounded shadow-sm" alt="SEO-barát felépítés">
+      <div class="card-body">
+        <h5 class="card-title">SEO-barát felépítés</h5>
+        <p class="card-text">Strukturált kód és optimalizált tartalom a jobb keresőoptimalizálásért.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="" class="card-img-top rounded shadow-sm" alt="Testreszabás">
+      <div class="card-body">
+        <h5 class="card-title">Testreszabás</h5>
+        <p class="card-text">Egyedi fejlesztés vagy CMS testreszabás vállalkozásodra szabva.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="" class="card-img-top rounded shadow-sm" alt="Integráció">
+      <div class="card-body">
+        <h5 class="card-title">Integráció</h5>
+        <p class="card-text">Zökkenőmentes integráció külső rendszerekkel és szolgáltatásokkal.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="" class="card-img-top rounded shadow-sm" alt="Biztonság">
+      <div class="card-body">
+        <h5 class="card-title">Biztonság</h5>
+        <p class="card-text">Megbízható, biztonságos működés modern technológiákkal.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4 mb-4">
+    <div class="card h-100 shadow-sm">
+      <img src="" class="card-img-top rounded shadow-sm" alt="Gyors betöltődés">
+      <div class="card-body">
+        <h5 class="card-title">Gyors betöltődés</h5>
+        <p class="card-text">Optimalizált teljesítmény a gyors oldalbetöltés érdekében – felhasználóbarát és SEO-hatékony.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
     <div class="row align-items-center mb-5">
       <div class="col-md-6">
-         <h2>Miért válaszd a NovaCreative webfejlesztési szolgáltatásait?</h2>
-      <p>
-        A mai digitális világban az első benyomás döntő szerepet játszik vállalkozásod sikerében. Egy professzionális, gyorsan betöltődő és egyszerűen kezelhető weboldal alapja minden hatékony online jelenlétnek. A NovaCreative csapata arra törekszik, hogy ne csupán egy weboldalt készítsünk, hanem egy olyan digitális élményt, amely tükrözi céged értékeit és segíti üzleti céljaid elérését.
-      </p>
-      <p>
-        Webfejlesztési szolgáltatásaink lefedik az összes kulcsfontosságú területet, legyen szó egy bemutatkozó oldalról, komplex e-kereskedelmi platformról vagy személyre szabott webalkalmazásról. Az iparág legmodernebb technológiáit és bevált módszereit alkalmazzuk, hogy biztosítsuk weboldalad maximális teljesítményét és skálázhatóságát.
-      </p>
-      <ul class="pipa">
-        <li> Teljes mértékben reszponzív és mobilbarát design, amely minden eszközön tökéletesen jelenik meg</li>
-        <li> SEO-barát felépítés, hogy a keresőmotorok könnyen indexeljék és előrébb rangsorolják weboldalad</li>
-        <li> Egyedi fejlesztés vagy népszerű CMS rendszerek (pl. WordPress, Drupal) testreszabása</li>
-        <li> Integráció harmadik féltől származó szolgáltatásokkal, mint fizetési megoldások, CRM vagy marketing automatizáció</li>
-        <li> Biztonságos, gyors és megbízható működés folyamatos támogatással és frissítésekkel</li>
-      </ul>
-      <p>
-        Együttműködésünk során fontosnak tartjuk az átláthatóságot és az ügyfeleinkkel való folyamatos kommunikációt, hogy a projekt minden fázisában az elvárásoknak megfelelő eredmény születhessen. Válassz minket, ha egy profi, kreatív és megbízható partnerre van szükséged a webfejlesztésben.
-      </p>
+        <img src="" class="img-fluid rounded shadow" alt="Csapatmunka technológiával">
       </div>
       <div class="col-md-6">
-        <img src="képek/webf2.jpg" class="img-fluid rounded" alt="Webfejlesztés illusztráció">
+        <h3>Csapatunk ereje</h3>
+        <p>A NovaCreative csapata fejlesztőkből, UI/UX tervezőkből és digitális stratégákból áll. Szakértelmük biztosítja, hogy minden projekt egyedi és technológiailag is naprakész legyen.</p>
+        <p>Agilis módszertanunk lehetővé teszi a gyors iterációkat és folyamatos visszacsatolást, hogy a projekt rugalmasan kövesse az elvárásokat.</p>
       </div>
     </div>
-
-    <div class="row mb-5">
-      <div class="col-md-6">
-        <img src="képek/csapatmunka.jpg" class="img-fluid rounded" alt="Csapatmunka technológiával">
+      <div class="row mb-5">
+      <div class="col-12 text-center mb-4">
+        <h3>Ajánlások</h3>
       </div>
-      <div class="col-md-6">
-          <h3>Csapatunk ereje</h3>
-      <p>
-        A NovaCreative csapata többféle szakemberből áll: fejlesztők, UI/UX tervezők, digitális stratégák és projektmenedzserek dolgoznak össze, hogy a legmagasabb szintű megoldásokat nyújtsuk. A csapatunk szakértelme biztosítja, hogy minden projekt egyedi igényekhez igazodjon, a technológiai trendek és legjobb gyakorlatok figyelembevételével.
-      </p>
-      <p>
-        Munkafolyamataink alapja az agilis fejlesztés, ami lehetővé teszi a gyors iterációkat és a folyamatos visszacsatolást ügyfeleink felé. Így garantáljuk, hogy a végeredmény mindig megfelel az elvárásoknak és rugalmasan alkalmazkodik a piaci változásokhoz.
-      </p>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Digitális Stratégiánk Alapja</h5>
+            <p class="card-text">"A NovaCreative által készített weboldal tökéletes kiindulópont lett a digitális jelenlétünk fejlesztéséhez. Teljes mértékben ajánljuk őket."</p>
+            <p class="text-muted">– Kovács Bt.</p>
+          </div>
+        </div>
       </div>
-    </div>
-
-    <div class="row mb-5">
-      <div class="col-md-6">
-       <h3>Esettanulmány: Egy sikeres webáruház</h3>
-      <p>
-        Egy induló divatmárka számára készítettük el teljes körű webshopját, amely modern designnal és intuitív kezelőfelülettel segítette az értékesítést. A beépített funkciók között szerepel bankkártyás fizetés, készletkezelés, valamint automatizált marketing eszközök, amelyek gyorsították a vásárlói folyamatokat és növelték a konverziós arányt.
-      </p>
-      <p>
-        Az eredmény egy dinamikusan növekvő webáruház lett, amely már az első hónapokban jelentős forgalmat és bevételnövekedést ért el, megerősítve a NovaCreative szakértelmét a digitális kereskedelemben.
-      </p>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Profizmus és Rugalmasság</h5>
+            <p class="card-text">"A csapat minden kihívásra talált megoldást. Gyors, precíz munka és remek kommunikáció jellemezte az egész projektet."</p>
+            <p class="text-muted">– WebShopCo</p>
+          </div>
+        </div>
       </div>
-      <div class="col-md-6">
-        <img src="képek/példa.jpg" class="img-fluid rounded" alt="Webshop példa">
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Több mint elvárt</h5>
+            <p class="card-text">"A végeredmény minden elvárásunkat túlszárnyalta. Már az első héten jelentkeztek az eredmények."</p>
+            <p class="text-muted">– TrendLab</p>
+          </div>
+        </div>
       </div>
-    </div>
+    </div>  
   </section>
 
-  <footer class="text-center bg-black py-4">
-    <div class="container">
+<footer class="text-light bg-dark mt-5 pt-4 pb-4">
+  <div class="container">
+    <div class="row text-center text-md-start">
+   
+      <div class="col-md-4 mb-4">
+        <img src="képek/logo-transparent.png" alt="Logo" class="mb-2 w-50">
+        <p>Kreatív digitális megoldások – webfejlesztés, arculattervezés, marketing egy helyen.</p>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <h5>Elérhetőségek</h5>
+        <ul class="list-unstyled">
+          <li><i class="bi bi-telephone-fill"></i> +36 20 223 0669</li>
+          <li><i class="bi bi-envelope-fill"></i> info@novacreative.hu</li>
+          <li><i class="bi bi-geo-alt-fill"></i> 9155 Lébény Akácfa utca 65.</li>
+        </ul>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <h5>Kövess minket</h5>
+        <a href="#" class="text-light me-2"><i class="bi bi-facebook"></i> Facebook</a><br>
+        <a href="#" class="text-light me-2"><i class="bi bi-instagram"></i> Instagram</a><br>
+      </div>
+    </div>
+
+    <hr class="border-light">
+
+    <div class="text-center">
       <p class="mb-0">&copy; 2025 NovaCreative. Minden jog fenntartva.</p>
     </div>
-  </footer>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
