--- a/brandepites.html
+++ b/brandepites.html
@@ -119,6 +119,38 @@
     </div>
   </div>
 </div>
+<section class="container my-5">
+  <h2 class="mb-5 text-center">Rólunk mondták</h2>
+
+  <div class="row mb-5 align-items-center">
+    <div class="col-md-2 text-center">
+      <img src="" alt="Kovács Dóra" class="img-fluid rounded-circle shadow" style="width: 100px;">
+    </div>
+    <div class="col-md-10">
+      <p class="fst-italic">„A NovaCreative csapata egy új szintre emelte a márkánkat. A logónk és arculatunk végre valóban minket tükröz.”</p>
+      <p class="fw-bold text-muted">— Kovács Dóra, marketing vezető</p>
+    </div>
+  </div>
+
+  <div class="row mb-5 align-items-center flex-row-reverse">
+    <div class="col-md-2 text-center">
+      <img src="" alt="Varga László" class="img-fluid rounded-circle shadow" style="width: 100px;">
+    </div>
+    <div class="col-md-10">
+      <p class="fst-italic">„Gyors, kreatív és precíz munka. A brandépítés során végig figyeltek az egyedi igényeinkre.”</p>
+      <p class="fw-bold text-muted">— Varga László, cégvezető</p>
+    </div>
+  </div>
+
+  <div class="row mb-5 align-items-center">
+    <div class="col-md-2 text-center">
+      <img src="" alt="Tóth Petra" class="img-fluid rounded-circle shadow" style="width: 100px;">
+    </div>
+    <div class="col-md-10">
+      <p class="fst-italic">„A vizuális megjelenésünk profi lett. A kézikönyv rengeteg időt spórolt a csapatunknak.”</p>
+      <p class="fw-bold text-muted">— Tóth Petra, brand menedzser</p>
+    </div>
+  </div>
 
   </section>
   <footer class="text-light bg-dark mt-5 pt-4 pb-4">
