--- a/brandepites.html
+++ b/brandepites.html
@@ -119,6 +119,7 @@
     </div>
   </div>
 </div>
+</section>
 <section class="container my-5">
   <h2 class="mb-5 text-center">Rólunk mondták</h2>
 
@@ -154,7 +155,7 @@
 
   </section>
 
- <footer class="text-light bg-dark mt-5 pt-4 pb-4">
+ <footer class="text-light bg-dark mt-5 mt-4 ">
   <div class="container">
     <div class="row text-center text-md-start">
 
@@ -186,7 +187,6 @@
     </div>
   </div>
 </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
