--- a/webfejlesztes.html
+++ b/webfejlesztes.html
@@ -54,7 +54,7 @@
   </div>
   <div class="col-md-4 mb-4">
     <div class="card h-100 shadow-sm">
-      <img src="" class="card-img-top rounded shadow-sm" alt="Reszponzív design">
+      <img src="képek/reszponziv-webdesign.png" class="card-img-top rounded shadow-sm" alt="Reszponzív design">
       <div class="card-body">
         <h5 class="card-title">Reszponzív design</h5>
         <p class="card-text">Teljes mértékben reszponzív és mobilbarát kialakítás minden eszközre.</p>
@@ -62,9 +62,9 @@
     </div>
   </div>
 
-  <div class="col-md-4 mb-4">
+  <div class="col-md-4 mb-4 ">
     <div class="card h-100 shadow-sm">
-      <img src="" class="card-img-top rounded shadow-sm" alt="SEO-barát felépítés">
+      <img src="képek/SEO-struktura.webp" class="card-img-top rounded shadow-sm" alt="SEO-barát felépítés">
       <div class="card-body">
         <h5 class="card-title">SEO-barát felépítés</h5>
         <p class="card-text">Strukturált kód és optimalizált tartalom a jobb keresőoptimalizálásért.</p>
@@ -72,9 +72,9 @@
     </div>
   </div>
 
-  <div class="col-md-4 mb-4">
+  <div class="col-md-4 mb-4 ">
     <div class="card h-100 shadow-sm">
-      <img src="" class="card-img-top rounded shadow-sm" alt="Testreszabás">
+      <img src="képek/testreszabas.jpeg" class="card-img-top rounded shadow-sm" alt="Testreszabás">
       <div class="card-body">
         <h5 class="card-title">Testreszabás</h5>
         <p class="card-text">Egyedi fejlesztés vagy CMS testreszabás vállalkozásodra szabva.</p>
@@ -82,9 +82,9 @@
     </div>
   </div>
 
-  <div class="col-md-4 mb-4">
+  <div class="col-md-4 mb-4 ">
     <div class="card h-100 shadow-sm">
-      <img src="" class="card-img-top rounded shadow-sm" alt="Integráció">
+      <img src="képek/Integráció.jpg" class="card-img-top rounded shadow-sm" alt="Integráció">
       <div class="card-body">
         <h5 class="card-title">Integráció</h5>
         <p class="card-text">Zökkenőmentes integráció külső rendszerekkel és szolgáltatásokkal.</p>
@@ -94,7 +94,7 @@
 
   <div class="col-md-4 mb-4">
     <div class="card h-100 shadow-sm">
-      <img src="" class="card-img-top rounded shadow-sm" alt="Biztonság">
+      <img src="képek/Biztonság.jpg" class="card-img-top rounded shadow-sm" alt="Biztonság">
       <div class="card-body">
         <h5 class="card-title">Biztonság</h5>
         <p class="card-text">Megbízható, biztonságos működés modern technológiákkal.</p>
@@ -104,7 +104,7 @@
 
   <div class="col-md-4 mb-4">
     <div class="card h-100 shadow-sm">
-      <img src="" class="card-img-top rounded shadow-sm" alt="Gyors betöltődés">
+      <img src="képek/Gyors betöltés.png" class="card-img-top rounded shadow-sm" alt="Gyors betöltődés">
       <div class="card-body">
         <h5 class="card-title">Gyors betöltődés</h5>
         <p class="card-text">Optimalizált teljesítmény a gyors oldalbetöltés érdekében – felhasználóbarát és SEO-hatékony.</p>
@@ -115,7 +115,7 @@
 
     <div class="row align-items-center mb-5">
       <div class="col-md-6">
-        <img src="" class="img-fluid rounded shadow" alt="Csapatmunka technológiával">
+        <img src="képek/csapatmunka.jpg" class="img-fluid rounded shadow" alt="Csapatmunka technológiával">
       </div>
       <div class="col-md-6">
         <h3>Csapatunk ereje</h3>
