--- a/webfejlesztes.html
+++ b/webfejlesztes.html
@@ -6,19 +6,19 @@
   <title>NovaCreative - Digitális Ügynökség</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow ">
     <div class="container">
       <img src="képek/logo-transparent.png" alt="logo" style="width: 50px;" class="me-2">
-      <a class="navbar-brand" href="">NovaCreative</a>
+      <a class="navbar-brand" href="index.html">NovaCreative-Főoldal</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Rólunk</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">Rólunk</a></li>
            <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#services" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Szolgáltatások
@@ -176,8 +176,8 @@
 
       <div class="col-md-4 mb-4">
         <h5>Kövess minket</h5>
-        <a href="#" class="text-light me-2"><i class="bi bi-facebook"></i> Facebook</a><br>
-        <a href="#" class="text-light me-2"><i class="bi bi-instagram"></i> Instagram</a><br>
+        <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="#" class="text-light me-3"><i class="bi bi-instagram fs-4"></i> </a>
       </div>
     </div>
 
