--- a/index.html
+++ b/index.html
@@ -143,27 +143,25 @@
   </section>
 
 
-<footer class="text-light bg-dark mt-5 pt-4 pb-4">
+ <footer class="text-light bg-dark mt-5 mt-4 ">
   <div class="container">
     <div class="row text-center text-md-start">
-      <!-- Céginformáció -->
+
       <div class="col-md-4 mb-4">
         <img src="képek/logo-transparent.png" alt="Logo" class="mb-2 w-50">
         <p>Kreatív digitális megoldások – webfejlesztés, arculattervezés, marketing egy helyen.</p>
       </div>
 
-      <!-- Elérhetőségek -->
       <div class="col-md-4 mb-4">
         <h5>Elérhetőségek</h5>
         <ul class="list-unstyled">
-          <li><i class="bi bi-telephone-fill"></i> +36 20 223 0669</li>
+          <li><i class="bi bi-telephone-fill"></i> +36 20 269 0669</li>
           <li><i class="bi bi-envelope-fill"></i> info@novacreative.hu</li>
-          <li><i class="bi bi-geo-alt-fill"></i> 9155 Lébény Akácfa utca 65.</li>
+          <li><i class="bi bi-geo-alt-fill"></i> 9155 Lébény Lilaakácköz 69</li>
         </ul>
       </div>
 
-      <!-- Közösségi média -->
-    <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4">
         <h5>Kövess minket</h5>
         <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
         <a href="#" class="text-light me-3"><i class="bi bi-instagram fs-4"></i> </a>
