--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="webfejlesztes.html">Webfejlesztés</a></li>
               <li><a class="dropdown-item" href="brandepites.html">Brandépítés</a></li>
-              <li><a class="dropdown-item" href="marketing.html">Online Marketing</a></li>
+           <li><a class="dropdown-item" href="marketing.html">Online Marketing</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link" href="index.html#team">Csapat</a></li>
+          <li class="nav-item"><a class="nav-link" href="csapat.html">Csapat</a></li>
           <li class="nav-item"><a class="nav-link" href="index.html#contact">Kapcsolat</a></li>
         </ul>
       </div>
@@ -56,7 +56,33 @@
       </div>
     </div>
   </section>
-   
+
+   <section class="container my-5">
+  <h2 class="text-center mb-4">Hogyan dolgozunk</h2>
+  <div class="row text-center">
+    <div class="col-md-3">
+      <i class="bi bi-chat-square-dots fs-1 text-primary"></i>
+      <h5 class="mt-3">1. Konzultáció</h5>
+      <p>Megismerjük a céljaid, piaci helyzeted és elképzeléseid.</p>
+    </div>
+    <div class="col-md-3">
+      <i class="bi bi-lightbulb fs-1 text-success"></i>
+      <h5 class="mt-3">2. Tervezés</h5>
+      <p>Stratégiát és látványterveket készítünk, közösen finomítva.</p>
+    </div>
+    <div class="col-md-3">
+      <i class="bi bi-gear fs-1 text-warning"></i>
+      <h5 class="mt-3">3. Megvalósítás</h5>
+      <p>Fejlesztjük és kivitelezzük a teljes brand vagy webes megoldást.</p>
+    </div>
+    <div class="col-md-3">
+      <i class="bi bi-rocket fs-1 text-danger"></i>
+      <h5 class="mt-3">4. Elindítás & Támogatás</h5>
+      <p>Élesítés után sem engedjük el a kezed – segítünk továbbfejlődni.</p>
+    </div>
+  </div>
+</section>
+
   <section class="container my-5">
       <div class="row align-items-center">
           <div class="col-md-6">
@@ -96,7 +122,6 @@
       </div>
     </div>
   </section>
-
 
  <footer class="text-light bg-dark mt-5 mt-4 ">
   <div class="container">
