--- a/webfejlesztes.html
+++ b/webfejlesztes.html
@@ -24,12 +24,12 @@
             Szolgáltatások
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="webfejlesztes.html">Webfejlesztés</a></li>
+            <li><a class="dropdown-item active" href="webfejlesztes.html">Webfejlesztés</a></li>
             <li><a class="dropdown-item" href="brandepites.html">Brandépítés</a></li>
-           <li><a class="dropdown-item" href="Marketing">Online Marketing</a></li>
+           <li><a class="dropdown-item" href="marketing.html">Online Marketing</a></li>
           </ul>
         </li>
-          <li class="nav-item"><a class="nav-link" href="#team">Csapat</a></li>
+        <li class="nav-item"><a class="nav-link" href="csapat.html">Csapat</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Kapcsolat</a></li>
         </ul>
       </div>
@@ -156,6 +156,14 @@
       </div>
     </div>  
   </section>
+  
+  <section class="py-5 text-center">
+  <div class="container">
+    <h2>Induljunk el közösen az online tér meghódítására!</h2>
+    <p class="lead">Vedd fel velünk a kapcsolatot és kérj egy ingyenes konzultációt!</p>
+    <a href="kapcsolat.html" class="btn btn-primary btn-lg mt-3">Kapcsolatfelvétel</a>
+  </div>
+</section>
 
  <footer class="text-light bg-dark mt-5 mt-4 ">
   <div class="container">
