--- a/marketing.html
+++ b/marketing.html
@@ -30,7 +30,7 @@
           </ul>
         </li>
           <li class="nav-item"><a class="nav-link" href="#team">Csapat</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Kapcsolat</a></li>
+          <li class="nav-item"><a class="nav-link" href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </div>
     </div>
@@ -158,6 +158,43 @@
           <h5 class="card-title">Prémium csomag</h5>
           <p class="card-text">Teljes marketing kiszervezés, hirdetési kampányok, remarketing, SEO, branding tanácsadás.</p>
           <p class="fw-bold">Ár: 119.000 Ft / hó</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="container my-5">
+  <h2 class="text-center mb-5">Akik megbíztak bennünk</h2>
+  <div class="row g-4 justify-content-center">
+
+   <div class="col-md-4">
+      <div class="card h-100 text-center shadow-sm border-0">
+        <img src="képek/schonebirka.PNG" class="card-img-top p-4" alt="schönebirka logó">
+        <div class="card-body">
+          <h5 class="card-title">Schönebirka.com</h5>
+          <p class="card-text fst-italic">„A NovaCreative segítségével a kecskefarm új értelmet nyert. A *Kellékfeleség* után végre nekünk is lett saját brandünk – és nem csak az állatok rajonganak érte!”</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card h-100 text-center shadow-sm border-0">
+        <img src="képek/hambi.PNG" class="card-img-top p-4" alt="UrbanFood Bistro logó">
+        <div class="card-body">
+          <h5 class="card-title">UrbanFood Bistro</h5>
+          <p class="card-text fst-italic">„A közösségi média kampányaink látványosan megugrottak. Letisztult dizájn és profi csapat!”</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="card h-100 text-center shadow-sm border-0">
+        <img src="képek/academy.PNG" class="card-img-top p-4" alt="EduPlus Akadémia logó">
+        <div class="card-body">
+          <h5 class="card-title">EduPlus Akadémia</h5>
+          <p class="card-text fst-italic">„Új honlapunkkal végre méltó módon tudjuk képviselni oktatási programjainkat az online térben.”</p>
         </div>
       </div>
     </div>
