--- a/brandepites.html
+++ b/brandepites.html
@@ -30,7 +30,7 @@
           </ul>
         </li>
         <li class="nav-item"><a class="nav-link" href="csapat.html">Csapat</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Kapcsolat</a></li>
+        <li class="nav-item"><a class="nav-link" href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </div>
     </div>
@@ -61,8 +61,8 @@
 </section>
 
     <section class="container mt-5 ">
-        <h2>Brandépítés a NovaCreative-nél</h2>                
-    
+        <h2>Brandépítés a NovaCreative-nél</h2>  
+             
     <div class="row g-4 mt-4">
   <div class="col-md-4">
     <div class="card h-100">
