--- a/csapat.html
+++ b/csapat.html
@@ -30,7 +30,7 @@
           </ul>
         </li>
          <li class="nav-item"><a class="nav-link active" href="csapat.html">Csapat</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Kapcsolat</a></li>
+          <li class="nav-item"><a class="nav-link" href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </div>
     </div>
