--- a/marketing.html
+++ b/marketing.html
@@ -29,7 +29,7 @@
            <li><a class="dropdown-item active" href="marketing.html">Online Marketing</a></li>
           </ul>
         </li>
-          <li class="nav-item"><a class="nav-link" href="#team">Csapat</a></li>
+          <li class="nav-item"><a class="nav-link" href="csapat.html">Csapat</a></li>
           <li class="nav-item"><a class="nav-link" href="kapcsolat.html">Kapcsolat</a></li>
         </ul>
       </div>
