--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -9,39 +9,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow ">
+    <div class="container ">
       <img src="képek/logo-transparent.png" alt="logo" style="width: 50px;" class="me-2">
-      NovaCreative-Főoldal
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="about.html">Rólunk</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Szolgáltatások</a>
-          <ul class="dropdown-menu dropdown-menu-dark bg-dark">
-            <li><a class="dropdown-item text-white" href="webfejlesztes.html">Webfejlesztés</a></li>
-            <li><a class="dropdown-item text-white" href="brandepites.html">Brandépítés</a></li>
-            <li><a class="dropdown-item text-white" href="marketing.html">Online Marketing</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="csapat.html">Csapat</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="kapcsolat.html">Kapcsolat</a>
-        </li>
-      </ul>
+      <a class="navbar-brand" href="index.html">NovaCreative-Főoldal</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="about.html">Rólunk</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Szolgáltatások</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="webfejlesztes.html">Webfejlesztés</a></li>
+              <li><a class="dropdown-item" href="brandepites.html">Brandépítés</a></li>
+           <li><a class="dropdown-item" href="marketing.html">Online Marketing</a></li>
+            </ul>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="csapat.html">Csapat</a></li>
+          <li class="nav-item"><a class="nav-link active" href="kapcsolat.html">Kapcsolat</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
  <header class="hero text-center">
     <div class="container">
       <h1 class="display-4 fw-bold">Lépj velünk kapcsolatba</h1>
