--- a/brandepites.html
+++ b/brandepites.html
@@ -109,7 +109,7 @@
   </div>
 <div class="col-md-4">
     <div class="card h-100">
-      <img src="képek/dig uzenet.jpg" class="card-img-top rounded shadow-sm" alt="Digitális arculat">
+      <img src="képek/dig.uzenet.jpg" class="card-img-top rounded shadow-sm" alt="Digitális arculat">
       <div class="card-body">
         <h5 class="card-title">Digitális Kiterjesztés</h5>
         <p class="card-text">A márkaarculat adaptálása webre, e-mail sablonokra és hirdetésekre.</p>
@@ -143,7 +143,7 @@
 
   <div class="row mb-5 align-items-center">
     <div class="col-md-2 text-center">
-      <img src="képek/Bajan anyja.webp" alt="Kiss Petra" class="img-fluid rounded-circle shadow">
+      <img src="képek/Bajan.anyja.webp" alt="Kiss Petra" class="img-fluid rounded-circle shadow">
     </div>
     <div class="col-md-10">
       <p class="fst-italic">„A vizuális megjelenésünk profi lett. A kézikönyv rengeteg időt spórolt a csapatunknak.”</p>
@@ -178,20 +178,45 @@
         </ul>
       </div>
 
-      <div class="col-md-4 mb-4">
+<div class="col-md-4 mb-4">
         <h5>Kövess minket</h5>
-        <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
-        <a href="#" class="text-light me-3"><i class="bi bi-instagram fs-4"></i> </a>
+        <a href="#" class="text-light me-3" onclick="showComingSoon(event)"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="#" class="text-light me-3" onclick="showComingSoon(event)"><i class="bi bi-instagram fs-4"></i></a>
       </div>
     </div>
-
     <hr class="border-light">
-
     <div class="text-center">
       <p class="mb-0">&copy; 2025 NovaCreative. Minden jog fenntartva.</p>
     </div>
   </div>
 </footer>
+
+<div class="modal fade" id="comingSoonModal" tabindex="-1" aria-labelledby="comingSoonModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="comingSoonModalLabel">Fejlesztés alatt</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+      </div>
+      <div class="modal-body">
+        UHHUHHUHH! Ez az oldal még nem készült el maga elveteműlt!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  AOS.init();
+  function showComingSoon(event) {
+    event.preventDefault();
+    var modal = new bootstrap.Modal(document.getElementById('comingSoonModal'));
+    modal.show();
+  }
+</script>
 </body>
 </html>
