--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -74,8 +74,8 @@
         <li class="mb-3"><i class="bi bi-geo-alt-fill me-2 text-primary"></i><strong>Cím:</strong> 9155 Lébény, Lilaakácköz 69</li>
         <li class="mb-3"><i class="bi bi-envelope-fill me-2 text-primary"></i><strong>Email:</strong> info@novacreative.hu</li>
         <li class="mb-3"><i class="bi bi-telephone-fill me-2 text-primary"></i><strong>Telefon:</strong> +36 20 269 0669</li>
-        <li class="mb-3"><i class="bi bi-facebook me-2 text-primary"></i><a href="#" class="text-decoration-none">Facebook oldalunk</a></li>
-        <li class="mb-3"><i class="bi bi-instagram me-2 text-danger"></i><a href="#" class="text-decoration-none">Instagram profilunk</a></li>
+         <a href="#" class="me-3" onclick="showComingSoon(event)"><i class="bi bi-facebook fs-4"></i></a>
+         <a href="#" class="me-3" onclick="showComingSoon(event)"><i class="bi bi-instagram fs-4"></i></a>
       </ul>
     </div>
   </div>
@@ -98,20 +98,44 @@
         </ul>
       </div>
 
-      <div class="col-md-4 mb-4">
+<div class="col-md-4 mb-4">
         <h5>Kövess minket</h5>
-        <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
-        <a href="#" class="text-light me-3"><i class="bi bi-instagram fs-4"></i> </a>
+        <a href="#" class="text-light me-3" onclick="showComingSoon(event)"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="#" class="text-light me-3" onclick="showComingSoon(event)"><i class="bi bi-instagram fs-4"></i></a>
       </div>
     </div>
-
     <hr class="border-light">
-
     <div class="text-center">
       <p class="mb-0">&copy; 2025 NovaCreative. Minden jog fenntartva.</p>
     </div>
   </div>
 </footer>
+
+<div class="modal fade" id="comingSoonModal" tabindex="-1" aria-labelledby="comingSoonModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="comingSoonModalLabel">Fejlesztés alatt</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+      </div>
+      <div class="modal-body">
+        UHHUHHUHH! Ez az oldal még nem készült el maga elveteműlt!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  AOS.init();
+  function showComingSoon(event) {
+    event.preventDefault();
+    var modal = new bootstrap.Modal(document.getElementById('comingSoonModal'));
+    modal.show();
+  }
+</script>
 </body>
 </html>
