--- a/brandepites.html
+++ b/brandepites.html
@@ -195,14 +195,14 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="comingSoonModalLabel">Fejlesztés alatt</h5>
+        <h5 class="modal-title" id="comingSoonModalLabel"> UHHUHHUHH!</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
       </div>
       <div class="modal-body">
-        UHHUHHUHH! Ez az oldal még nem készült el maga elveteműlt!
+        Ez az oldal még nem készült el maga elveteműlt!
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"> UHHUHHUHH!</button>
       </div>
     </div>
   </div>
