--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </header>
 
  
-  <section id="about" class="py-5">
+  <section class="py-5">
     <div class="container text-center">
       <img src="képek/logo.png" alt="logó" class="logo mb-4">
       <h2 class="mb-4">Rólunk</h2>
@@ -53,7 +53,7 @@
   </section>
 
 
-  <section id="services" class="py-5 bg-light text-dark">
+  <section class="py-5 bg-light text-dark">
     <div class="container">
       <h2 class="text-center mb-4">Szolgáltatásaink</h2>
       <div class="row text-center">
@@ -92,7 +92,7 @@
   </section>
 
   
-  <section id="team" class="py-5">
+  <section  class="py-5">
     <div class="container text-center">
       <h2 class="mb-4">Csapatunk</h2>
       <div class="row">
@@ -115,7 +115,7 @@
     </div>
   </section>
 
-  <section id="contact" class="py-5 bg-light text-dark">
+  <section class="py-5 bg-light text-dark">
     <div class="container">
       <h2 class="text-center mb-4">Kapcsolat</h2>
       <div class="row justify-content-center">
@@ -176,14 +176,14 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="comingSoonModalLabel">Fejlesztés alatt</h5>
+        <h5 class="modal-title" id="comingSoonModalLabel"> UHHUHHUHH!</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
       </div>
       <div class="modal-body">
-        UHHUHHUHH! Ez az oldal még nem készült el maga elveteműlt!
+        Ez az oldal még nem készült el maga elveteműlt!
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"> UHHUHHUHH!</button>
       </div>
     </div>
   </div>
