--- a/csapat.html
+++ b/csapat.html
@@ -145,8 +145,8 @@
 <section class="bg-body-secondary py-5">
   <div class="container">
     <div class="mb-5">
-      <h1 class="text-center fw-bold display-5 text-dark">Miért válaszd a <span class="text-warning">Turkish Photons</span>-t?</h1>
-      <h3 class="text-secondary text-center">Dolgozóink elmondják!</h3>
+      <h1 class="text-center fw-bold display-5 text-dark">Miért válaszd a NovaCreative-ot?</h1>
+      <h3 class="text-secondary text-center">Csapatunk megmondja!</h3>
     </div>
 
     <div class="carousel-wrapper p-4 rounded shadow-sm">
