--- a/webfejlesztes.html
+++ b/webfejlesztes.html
@@ -103,7 +103,7 @@
 
   <div class="col-md-4 mb-4">
     <div class="card h-100 shadow-sm">
-      <img src="képek/Gyors betöltés.png" class="card-img-top rounded shadow-sm" alt="Gyors betöltődés">
+      <img src="képek/Gyors.betöltés.png" class="card-img-top rounded shadow-sm" alt="Gyors betöltődés">
       <div class="card-body">
         <h5 class="card-title">Gyors betöltődés</h5>
         <p class="card-text">Optimalizált teljesítmény a gyors oldalbetöltés érdekében – felhasználóbarát és SEO-hatékony.</p>
@@ -184,19 +184,43 @@
 
       <div class="col-md-4 mb-4">
         <h5>Kövess minket</h5>
-        <a href="#" class="text-light me-3"><i class="bi bi-facebook fs-4"></i></a>
-        <a href="#" class="text-light me-3"><i class="bi bi-instagram fs-4"></i> </a>
+        <a href="#" class="text-light me-3" onclick="showComingSoon(event)"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="#" class="text-light me-3" onclick="showComingSoon(event)"><i class="bi bi-instagram fs-4"></i></a>
       </div>
     </div>
-
     <hr class="border-light">
-
     <div class="text-center">
       <p class="mb-0">&copy; 2025 NovaCreative. Minden jog fenntartva.</p>
     </div>
   </div>
 </footer>
 
+<div class="modal fade" id="comingSoonModal" tabindex="-1" aria-labelledby="comingSoonModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="comingSoonModalLabel"> UHHUHHUHH!</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Bezárás"></button>
+      </div>
+      <div class="modal-body">
+        Ez az oldal még nem készült el maga elveteműlt!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal"> UHHUHHUHH!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  AOS.init();
+  function showComingSoon(event) {
+    event.preventDefault();
+    var modal = new bootstrap.Modal(document.getElementById('comingSoonModal'));
+    modal.show();
+  }
+</script>
 </body>
 </html>
