--- a/marketing.html
+++ b/marketing.html
@@ -217,11 +217,11 @@
         <p>Kreatív digitális megoldások – webfejlesztés, arculattervezés, marketing egy helyen.</p>
       </div>
 
-      <div class="col-md-4 mb-4">
+     <div class="col-md-4 mb-4">
         <h5>Elérhetőségek</h5>
         <ul class="list-unstyled">
           <li><i class="bi bi-telephone-fill"></i> +36 20 269 0669</li>
-          <li><i class="bi bi-envelope-fill"></i> info@novacreative.hu</li>
+          <li><i class="bi bi-envelope-fill"></i> <a href="mailto:info@novacreative.hu">info@novacreative.hu</a></li>
           <li><i class="bi bi-geo-alt-fill"></i> 9155 Lébény Lilaakácköz 69</li>
         </ul>
       </div>
