--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -72,7 +72,7 @@
       <h3 class="mb-4">Elérhetőségeink</h3>
       <ul class="list-unstyled">
         <li class="mb-3"><i class="bi bi-geo-alt-fill me-2 text-primary"></i><strong>Cím:</strong> 9155 Lébény, Lilaakácköz 69</li>
-        <li class="mb-3"><i class="bi bi-envelope-fill me-2 text-primary"></i><strong>Email:</strong> info@novacreative.hu</li>
+        <li class="mb-3"><i class="bi bi-envelope-fill me-2 text-primary"></i><strong>Email:</strong> <a href="mailto:info@novacreative.hu">info@novacreative.hu</a></li>
         <li class="mb-3"><i class="bi bi-telephone-fill me-2 text-primary"></i><strong>Telefon:</strong> +36 20 269 0669</li>
          <a href="#" class="me-3" onclick="showComingSoon(event)"><i class="bi bi-facebook fs-4"></i></a>
          <a href="#" class="me-3" onclick="showComingSoon(event)"><i class="bi bi-instagram fs-4"></i></a>
