--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </section>
 
 
-  <section class="py-5 bg-light text-dark">
+  <section class="py-5 bg-light text-dark" id="services">
     <div class="container">
       <h2 class="text-center mb-4">Szolgáltatásaink</h2>
       <div class="row text-center">
